--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -1137,13 +1137,16 @@ body {
   font-size: 13px;
   margin-bottom: 0;
 }
+.single-timeline-area .single-timeline-content .timeline-text h6{
+  margin-bottom: 10px;
+}
 .single-timeline-area .single-timeline-content:hover .timeline-icon,
 .single-timeline-area .single-timeline-content:focus .timeline-icon {
   background-color: #020710;
 }
 .single-timeline-area .single-timeline-content:hover .timeline-text h6,
 .single-timeline-area .single-timeline-content:focus .timeline-text h6 {
-  color: #3f43fd;
+  color: #49aaaa;
 }
 
 
