--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -30,7 +30,7 @@
   --light-gray: hsl(0, 0%, 80%);
   --mint-cream: hsl(160, 100%, 98%);
   --cultured: hsl(0, 0%, 93%);
-  --go-green: hsl(145, 63%, 42%);
+  --go-green: #49aaaa;
   --white: hsl(0, 0%, 100%);
   --jet: hsl(0, 0%, 18%);
 
