--- a/adynamics3/css/globe.css
+++ b/adynamics3/css/globe.css
@@ -14,15 +14,16 @@ path:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  align-self: center;
 }
 
 .map svg {
   width: 200rem;
   height: 100vh;
-  top: 0;
-  left: 15%;
   position: relative;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-left: 15rem;
 }
 
 .map #india {
@@ -39,9 +40,6 @@ path:hover {
 
 .map #south_africa {
   fill: #46aaaa;
-}
-
-.map #south_africa:hover {
 }
 
 .south-africa {
