--- a/adynamics3/css/style.css
+++ b/adynamics3/css/style.css
@@ -591,4 +591,61 @@ nav {
   }
 }
 
+@media screen and (max-width: 1350px){
+  .hero-banner{
+    width: 80%;
+  }
+
+  .hero{
+    width: 100%;
+
+    .hero-title{
+      font-size: 1.5rem;
+    }
+  }
+
+  .hero .hero-content{
+    width: 90%;
+  }
+
+  body{
+    /* font-size: 0.6rem;
+    padding: 0.5rem; */
+  }
+}
+
+.demo-class{
+  display: none;
+  z-index: 99999;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #8181815d;
+  width: 90%;
+  height: 90%;
+  border-radius: 1rem;
+  padding: 5rem;
+
+  iframe{
+    width: 100%;
+    height: 100%;
+  }
+
+  button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #49aaaa;
+    color: white;
+    border: none;
+    padding: 1.5rem;
+    border-radius: 1rem;
+
+    i{
+      font-size: 2rem;
+    }
+  }
+}
+
 
