--- a/adynamics3/css/style.css
+++ b/adynamics3/css/style.css
@@ -437,6 +437,7 @@ nav {
   position: absolute;
   left: 0;
   right: 0;
+  top: 2rem;
   font-size: 1.2rem;
   width: 100%;
   height: 26px;
@@ -451,10 +452,11 @@ nav {
   height: 100%;
   position: absolute;
   top: 0;
-  margin-left: -5.5rem;
+  margin-left:-1rem;
   bottom: 0;
   left: 0;
   translate: 1s;
+  opacity: 0.5;
 }
 
 .enquiry-button-nav:hover {
@@ -645,6 +647,34 @@ nav {
     i{
       font-size: 2rem;
     }
+  }
+}
+
+.carousel{
+  width: 100%;
+  height: 40vh;
+
+  h2{
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 2rem;
+    background-color: #757575b6;
+  }
+
+  p{
+    font-size: 1.1rem;
+    text-align: center;
+    margin-top: 1rem;
+    color: #000;
+    background-color: #00000059;
+  }
+
+}
+
+
+@media screen and (orientation: landscape) {
+  .carousel img {
+    height: 100vh;
   }
 }
 
