--- a/adynamics3/css/style.css
+++ b/adynamics3/css/style.css
@@ -571,7 +571,7 @@ nav {
   }
   
   .hero-banner{
-    width: 20rem;
+    width: 15rem;
   }
 
   .hero{
@@ -595,19 +595,19 @@ nav {
 
 @media screen and (max-width: 1350px){
   .hero-banner{
-    width: 80%;
+    width: 70%;
   }
 
   .hero{
     width: 100%;
 
     .hero-title{
-      font-size: 1.5rem;
+      font-size: 1rem;
     }
   }
 
   .hero .hero-content{
-    width: 90%;
+    width: 100%;
   }
 
   body{
@@ -650,23 +650,41 @@ nav {
   }
 }
 
+@media screen and (max-width: 768px){
+  .demo-class{
+    padding: 2rem;
+    height: 40%;
+    top: 30%;
+  }
+  
+}
+
 .carousel{
   width: 100%;
-  height: 40vh;
+  height: 30vh;
 
   h2{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-align: center;
-    margin-top: 2rem;
     background-color: #757575b6;
+    color: #fff;
   }
 
   p{
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     text-align: center;
-    margin-top: 1rem;
-    color: #000;
-    background-color: #00000059;
+    color: #ffffff;
+    background-color: #00000090;
+  }
+
+  a{
+    color: #ffffff;
+    background-color: #00000090;
+    border-radius: 1rem;
+  }
+
+  .carousel-caption{
+    height: 90%
   }
 
 }
