--- a/adynamics3/css/globe.css
+++ b/adynamics3/css/globe.css
@@ -1,111 +1,39 @@
-path {
-  transition: fill 0.1s linear;
-}
 
-path:hover {
-  fill: #565656;
-}
-
-.map {
-  width: 100rem;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.map svg {
-  width: 200rem;
-  height: 100vh;
-  position: relative;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin-left: 15rem;
-}
-
-.map #india {
-  fill: #46aaaa;
-}
-
-.map #usa {
-  fill: #46aaaa;
-}
-
-.map #ethiopia {
-  fill: #46aaaa;
-}
-
-.map #south_africa {
-  fill: #46aaaa;
-}
-
-.south-africa {
-  display: none;
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  .courses-item{
-    background-color: aliceblue;
-  }
-}
-
-.usa {
-  display: none;
-  position: absolute;
-  top: 40%;
-  left: 30%;
-  .courses-item{
-    background-color: aliceblue;
-  }
-}
-
-.ripple {
-  background-color: #006857;
-  width: 0.5em;
-  height: 0.5em;
-  border-radius: 200rem;
-  animation: ripple 3s linear infinite;
-  position: absolute;
-  z-index: 999;
-}
-
-.ripple-1 {
-  animation-delay: 0.1s;
-  position: absolute;
-  top: 15rem;
-  left: 30rem;
-}
-
-.ripple-2 {
-  animation-delay: 2s;
-  position: absolute;
-  top: 32.7rem;
-  left: 54.4rem;
-}
 
 .mobile-view {
   display: none;
 }
 
-@keyframes ripple {
-  0% {
-    box-shadow: 0 0 0 0rem rgba(148, 148, 148, 0.2),
-                0 0 0 0.4rem rgba(40, 139, 113, 0.2),
-                0 0 0 1rem rgba(117, 117, 117, 0.2),
-                0 0 0 1rem rgba(21, 148, 159, 0.306);
-  }
-  100% {
-    box-shadow: 0 0 0 1rem rgba(21, 148, 159, 0.436),
-                0 0 0 1.2rem rgba(21, 148, 159, 0.501),
-                0 0 0 1.5rem rgba(21, 148, 159, 0.247),
-                0 0 0 3rem rgba(21, 148, 159, 0.072);
-  }
+.map {
+  width: 100%;
+  height: 100%;
 }
 
-@media (max-width: 768px) {
+#AR{
+  fill: #49aaaa;
+}
+
+#IN{
+  fill: #49aaaa;
+}
+
+#US{
+  fill: #49aaaa;
+}
+
+#ZA{
+  fill: #49aaaa;
+}
+
+#TN{
+  fill: #49aaaa;
+}
+
+#MA{
+  fill: #49aaaa;
+}
+
+@media (max-width: 769px) {
   .map {
     display: none;
   }
@@ -113,5 +41,482 @@ path:hover {
   .mobile-view {
     display: block;
     margin: 1rem;
+  }
+}
+
+.india{
+  display: none;
+  position : absolute;
+  top: 50%;
+  left: 30%;
+  overflow: hidden;
+  z-index: 9999;
+
+  .courses-item{
+    background-color: rgb(255, 255, 255);
+  }
+
+}
+
+.usa{
+  display: none;
+  position : absolute;
+  top: 50%;
+  left: 40%;
+  overflow: hidden;
+  z-index: 9999;
+
+  .courses-item{
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.morocco{
+  display: none;
+  position : absolute;
+  top: 80%;
+  left: 30%;
+  z-index: 9999;
+  .courses-item{
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.tunisia{
+  display: none;
+  position : absolute;
+  top: 75%;
+  left: 30%;
+  z-index: 9999;
+  .courses-item{
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.south-africa{
+  display: none;
+  position : absolute;
+  top: 70%;
+  left: 30%;
+  z-index: 9999;
+  .courses-item{
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.argentina{
+  display: none;
+  position : absolute;
+  top: 70%;
+  left: 30%;
+  z-index: 9999;
+  .courses-item{
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+
+.pin {
+  width: 30px;
+  height: 30px;
+  border-radius: 50% 50% 50% 0;
+  background: #49aaaa;
+  position: absolute;
+  transform: rotate(-45deg);
+  margin: -20px 0 0 -20px;
+  border: #00000076 2px solid ;
+}
+.pin:after {
+  content: "";
+  width: 14px;
+  height: 14px;
+  margin: 8px 0 0 8px;
+  background: #e6e6e6;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.bounce {
+  animation-name: bounce;
+  animation-fill-mode: both;
+  animation-duration: 1s;
+}
+
+.pulse {
+  background: #d6d4d4;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  margin: 11px 0px 0px -12px;
+  transform: rotateX(55deg);
+  z-index: -2;
+}
+.pulse:after {
+  content: "";
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  margin: -13px 0 0 -13px;
+  animation: pulsate 1s ease-out;
+  animation-iteration-count: infinite;
+  opacity: 0;
+  box-shadow: 0 0 1px 2px #ffffff;
+  animation-delay: 1.1s;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(0.1, 0.1);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1.2, 1.2);
+    opacity: 0;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    opacity: 0;
+    transform: translateY(-2000px) rotate(-45deg);
+  }
+
+  60% {
+    opacity: 1;
+    transform: translateY(30px) rotate(-45deg);
+  }
+
+  80% {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+
+  100% {
+    transform: translateY(0) rotate(-45deg);
+  }
+}
+
+
+.usaPointer{
+  .pin{
+    top: 65%;
+    left: 25%;
+  }
+
+  .pulse{
+    top: 65.7%;
+    left: 24.45%;
+    z-index: 999;
+  }
+}
+
+.moroccoPointer{
+  .pin{
+    top: 70%;
+    left: 48%;
+  }
+
+  .pulse{
+    top: 70.6%;
+    left: 47.3%;
+    z-index: 999;
+  }
+}
+
+.tunisiaPointer{
+  .pin{
+    top: 67.4%;
+    left: 52.5%;
+  }
+
+  .pulse{
+    top: 67.9%;
+    left: 51.8%;
+    z-index: 999;
+  }
+}
+
+.southAfricaPointer{
+  .pin{
+    top: 105%;
+    left: 56%;
+  }
+
+  .pulse{
+    top: 105.6%;
+    left: 55.3%;
+    z-index: 999;
+  }
+}
+
+.argentinaPointer{
+  .pin{
+    top: 107%;
+    left: 33%;
+  }
+
+  .pulse{
+    top: 107.5%;
+    left: 32.2%;
+    z-index: 999;
+  }
+}
+
+.indiaPointer{
+  .pin{
+    top: 75%;
+    left: 71%;
+  }
+
+  .pulse{
+    top: 75.6%;
+    left: 70.2%;
+    z-index: 999;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .usaPointer{
+    .pin{
+      top: 59%;
+      left: 23%;
+    }
+  
+    .pulse{
+      top: 59.7%;
+      left: 22.6%;
+      z-index: 999;
+    }
+  }
+  
+  .moroccoPointer{
+    .pin{
+      top: 64%;
+      left: 47%;
+    }
+  
+    .pulse{
+      top: 64.4%;
+      left: 46.6%;
+      z-index: 999;
+    }
+  }
+  
+  .tunisiaPointer{
+    .pin{
+      top: 60%;
+      left: 52%;
+    }
+  
+    .pulse{
+      top: 60.4%;
+      left: 51.5%;
+      z-index: 999;
+    }
+  }
+  
+  .southAfricaPointer{
+    .pin{
+      top: 105%;
+      left: 56%;
+    }
+  
+    .pulse{
+      top: 105.6%;
+      left: 55.6%;
+      z-index: 999;
+    }
+  }
+  
+  .argentinaPointer{
+    .pin{
+      top: 107%;
+      left: 32.7%;
+    }
+  
+    .pulse{
+      top: 107.5%;
+      left: 32.2%;
+      z-index: 999;
+    }
+  }
+  
+  .indiaPointer{
+    .pin{
+      top: 70%;
+      left: 71%;
+    }
+  
+    .pulse{
+      top: 70.4%;
+      left: 70.5%;
+      z-index: 999;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .usaPointer{
+    .pin{
+      top: 57%;
+      left: 24%;
+    }
+  
+    .pulse{
+      top: 57.4%;
+      left: 23.2%;
+      z-index: 999;
+    }
+  }
+  
+  .moroccoPointer{
+    .pin{
+      top: 60%;
+      left: 48.4%;
+    }
+  
+    .pulse{
+      top: 60.4%;
+      left: 47.6%;
+      z-index: 999;
+    }
+  }
+  
+  .tunisiaPointer{
+    .pin{
+      top: 58%;
+      left: 53%;
+    }
+  
+    .pulse{
+      top: 58.4%;
+      left: 52.2%;
+      z-index: 999;
+    }
+  }
+  
+  .southAfricaPointer{
+    .pin{
+      top: 85%;
+      left: 57%;
+    }
+  
+    .pulse{
+      top: 85.4%;
+      left: 55.9%;
+      z-index: 999;
+    }
+  }
+  
+  .argentinaPointer{
+    .pin{
+      top: 87%;
+      left: 32.9%;
+    }
+  
+    .pulse{
+      top: 87.3%;
+      left: 32%;
+      z-index: 999;
+    }
+  }
+  
+  .indiaPointer{
+    .pin{
+      top: 63%;
+      left: 71.4%;
+    }
+  
+    .pulse{
+      top: 63.4%;
+      left: 70.5%;
+      z-index: 999;
+    }
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .usaPointer{
+    .pin{
+      top: 63%;
+      left: 24%;
+    }
+  
+    .pulse{
+      top: 63.4%;
+      left: 23.2%;
+      z-index: 999;
+    }
+  }
+  
+  .moroccoPointer{
+    .pin{
+      top: 68%;
+      left: 48.5%;
+    }
+  
+    .pulse{
+      top: 68.4%;
+      left: 47.7%;
+      z-index: 999;
+    }
+  }
+  
+  .tunisiaPointer{
+    .pin{
+      top: 67%;
+      left: 52.5%;
+    }
+  
+    .pulse{
+      top: 67.4%;
+      left: 51.7%;
+      z-index: 999;
+    }
+  }
+  
+  .southAfricaPointer{
+    .pin{
+      top: 105%;
+      left: 56.4%;
+    }
+  
+    .pulse{
+      top: 105.6%;
+      left: 55.6%;
+      z-index: 999;
+    }
+  }
+  
+  .argentinaPointer{
+    .pin{
+      top: 107%;
+      left: 32.7%;
+    }
+  
+    .pulse{
+      top: 107.5%;
+      left: 32%;
+      z-index: 999;
+    }
+  }
+  
+  .indiaPointer{
+    .pin{
+      top: 74%;
+      left: 71%;
+    }
+  
+    .pulse{
+      top: 74.4%;
+      left: 70.3%;
+      z-index: 999;
+    }
   }
 }
