--- a/adynamics3/scss/globe.scss
+++ b/adynamics3/scss/globe.scss
@@ -1,67 +1,8 @@
-body {
-    margin: 0;
-    font-family: "Open Sans Condensed", sans-serif;
-
-  .map #india {
-    fill: #46aaaa;
-    animation: ripple 0.7s linear infinite;
-  }
-  
-  .map #usa {
-    fill: #46aaaa;
-    animation: ripple 0.7s linear infinite;
-  }
-  
-  .map #ethiopia {
-    fill: #aa4d46;
-    animation: ripple 0.7s linear infinite;
-  }
-  
-  .map #south_africa {
-    fill: #46aaaa;
-    animation: ripple 0.7s linear infinite;
-  }
-  
-  
-  
-  @keyframes slide-in-animation {
-    0% {
-      opacity: 0;
-      transform: translatex(250px);
-    }
-    100% {
-      opacity: 1;
-      transform: translatex(0);
-    }
-  }
-  
-  @keyframes slide-out-animation {
-    0% {
-      opacity: 1;
-      transform: translatex(0);
-    }
-    100% {
-      opacity: 0;
-      transform: translatex(-250px);
-    }
-  }
-
-  $color: #65ff78;
-
-  @keyframes ripple {
-    0% {
-      box-shadow: 0 0 0 0rem rgba($ripple-color, 0.2),
-                  0 0 0 1rem rgba($ripple-color, 0.2),
-                  0 0 0 2rem rgba($ripple-color, 0.2),
-                  0 0 0 5rem rgba($ripple-color, 0.2);
-    }
-    100% {
-      box-shadow: 0 0 0 1rem rgba($ripple-color, 0.2),
-                  0 0 0 2rem rgba($ripple-color, 0.2),
-                  0 0 0 5rem rgba($ripple-color, 0.2),
-                  0 0 0 8rem rgba($ripple-color, 0);
-    }
-  }
+svg {
+	display: block;
+	width: 100%;
+	height: auto;
+	max-height: 100vh;
+	display: block;
+	margin: auto;
 }
-
-  
