--- a/adynamics3/check.css
+++ b/adynamics3/check.css
@@ -144,9 +144,10 @@ h1, h2, h3, h4, h5, h6 {
 .new_footer_top .footer_bg {
     position: absolute;
     bottom: 0;
-    background: url("./img/s.png") no-repeat scroll center 0;
+    background: url("./img/s.png");
     width: 100%;
     height: 266px;
+    
 }
 
 
@@ -181,3 +182,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*************footer End*****************/
+@media (min-width: 1100px){
+ .ft_mar{
+    margin-left: -100px;
+ }
+}
