--- a/adynamics3/css/style.css
+++ b/adynamics3/css/style.css
@@ -478,7 +478,7 @@ nav {
   border-right: 0.15em solid #49aaaa; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.15em; /* Adjust as needed */
+  letter-spacing: 0.10em; /* Adjust as needed */
   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
@@ -649,7 +649,11 @@ nav {
     }
   }
 }
-
+@ media screen and (max-width:400px){
+  .typewriter h1{
+    letter-spacing: 0.10em;
+  }
+}
 @media screen and (max-width: 768px){
   .demo-class{
     padding: 2rem;
