--- a/adynamics3/css/globe.css
+++ b/adynamics3/css/globe.css
@@ -1,4 +1,3 @@
-
 .mobile-view {
   display: none;
 
@@ -13,7 +12,7 @@
     color: rgb(26, 26, 26);
   }
 
-  a{
+  a {
     color: black;
     background-color: #49aaaa;
     padding: 0.5rem 1rem;
@@ -21,11 +20,11 @@
     text-decoration: none;
     margin-top: 1rem;
     font-size: 1.1rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
   }
 
-  .carousel-item{
+  .carousel-item {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,46 +32,6 @@
     background-color: #f0f0f0d8;
     padding: 1rem;
     border-radius: 2rem;
-  }
-}
-
-.map {
-  width: 100%;
-  height: 100%;
-}
-
-#AR {
-  fill: #49aaaa;
-}
-
-#IN {
-  fill: #49aaaa;
-}
-
-#US {
-  fill: #49aaaa;
-}
-
-#ZA {
-  fill: #49aaaa;
-}
-
-#TN {
-  fill: #49aaaa;
-}
-
-#MA {
-  fill: #49aaaa;
-}
-
-@media (max-width: 769px) {
-  .map {
-    display: none;
-  }
-
-  .mobile-view {
-    display: block;
-    margin: 1rem;
   }
 }
 
@@ -108,6 +67,7 @@
   top: 30%;
   left: 30%;
   z-index: 9999;
+
   .courses-item {
     background-color: rgb(255, 255, 255);
   }
@@ -119,6 +79,7 @@
   top: 85%;
   left: 30%;
   z-index: 9999;
+
   .courses-item {
     background-color: rgb(255, 255, 255);
   }
@@ -130,6 +91,7 @@
   top: 70%;
   left: 30%;
   z-index: 9999;
+
   .courses-item {
     background-color: rgb(255, 255, 255);
   }
@@ -141,411 +103,125 @@
   top: 70%;
   left: 30%;
   z-index: 9999;
+
   .courses-item {
     background-color: rgb(255, 255, 255);
   }
 }
 
-.pin {
-  width: 30px;
-  height: 30px;
-  border-radius: 50% 50% 50% 0;
-  background: #49aaaa;
-  position: absolute;
-  transform: rotate(-45deg);
-  margin: -20px 0 0 -20px;
-  border: #00000076 2px solid;
-}
-.pin:after {
-  content: "";
-  width: 14px;
-  height: 14px;
-  margin: 8px 0 0 8px;
-  background: #e6e6e6;
-  position: absolute;
-  border-radius: 50%;
+path {
+  transition: fill 0.1s linear;
 }
 
-.bounce {
-  animation-name: bounce;
-  animation-fill-mode: both;
-  animation-duration: 1s;
+path:hover {
+  fill: #565656;
 }
 
-.pulse {
-  background: #d6d4d4;
-  border-radius: 50%;
-  height: 14px;
-  width: 14px;
-  position: absolute;
-  margin: 11px 0px 0px -12px;
-  transform: rotateX(55deg);
-  z-index: -2;
-}
-.pulse:after {
-  content: "";
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  position: absolute;
-  margin: -13px 0 0 -13px;
-  animation: pulsate 1s ease-out;
-  animation-iteration-count: infinite;
-  opacity: 0;
-  box-shadow: 0 0 1px 2px #ffffff;
-  animation-delay: 1.1s;
+.map {
+  width: 100rem;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 }
 
-@keyframes pulsate {
+.map svg {
+  width: 200rem;
+  height: 100vh;
+  top: 0;
+  left: 15%;
+  position: relative;
+}
+
+.map #india {
+  fill: #46aaaa;
+}
+
+.map #usa {
+  fill: #46aaaa;
+}
+
+.map #ethiopia {
+  fill: #46aaaa;
+}
+
+.map #south_africa {
+  fill: #46aaaa;
+}
+
+.south-africa {
+  display: none;
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  .courses-item{
+    background-color: aliceblue;
+  }
+}
+
+.usa {
+  display: none;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  .courses-item{
+    background-color: aliceblue;
+  }
+}
+
+.ripple {
+  background-color: #006857;
+  width: 0.5em;
+  height: 0.5em;
+  border-radius: 200rem;
+  animation: ripple 3s linear infinite;
+  position: absolute;
+  z-index: 999;
+}
+
+.ripple-1 {
+  animation-delay: 0.1s;
+  position: absolute;
+  top: 15rem;
+  left: 30rem;
+}
+
+.ripple-2 {
+  animation-delay: 2s;
+  position: absolute;
+  top: 32.7rem;
+  left: 54.4rem;
+}
+
+.mobile-view {
+  display: none;
+}
+
+@keyframes ripple {
   0% {
-    transform: scale(0.1, 0.1);
-    opacity: 0;
+    box-shadow: 0 0 0 0rem rgba(148, 148, 148, 0.2),
+                0 0 0 0.4rem rgba(40, 139, 113, 0.2),
+                0 0 0 1rem rgba(117, 117, 117, 0.2),
+                0 0 0 1rem rgba(21, 148, 159, 0.306);
   }
-
-  50% {
-    opacity: 1;
-  }
-
   100% {
-    transform: scale(1.2, 1.2);
-    opacity: 0;
+    box-shadow: 0 0 0 1rem rgba(21, 148, 159, 0.436),
+                0 0 0 1.2rem rgba(21, 148, 159, 0.501),
+                0 0 0 1.5rem rgba(21, 148, 159, 0.247),
+                0 0 0 3rem rgba(21, 148, 159, 0.072);
   }
 }
 
-@keyframes bounce {
-  0% {
-    opacity: 0;
-    transform: translateY(-2000px) rotate(-45deg);
+@media (max-width: 768px) {
+  .map {
+    display: none;
   }
 
-  60% {
-    opacity: 1;
-    transform: translateY(30px) rotate(-45deg);
-  }
-
-  80% {
-    transform: translateY(-10px) rotate(-45deg);
-  }
-
-  100% {
-    transform: translateY(0) rotate(-45deg);
-  }
-}
-
-.usaPointer {
-  .pin {
-    top: 65%;
-    left: 25%;
-  }
-
-  .pulse {
-    top: 65.7%;
-    left: 24.45%;
-    z-index: 999;
-  }
-}
-
-.moroccoPointer {
-  .pin {
-    top: 70%;
-    left: 48%;
-  }
-
-  .pulse {
-    top: 70.6%;
-    left: 47.3%;
-    z-index: 999;
-  }
-}
-
-.tunisiaPointer {
-  .pin {
-    top: 67.4%;
-    left: 52.5%;
-  }
-
-  .pulse {
-    top: 67.9%;
-    left: 51.8%;
-    z-index: 999;
-  }
-}
-
-.southAfricaPointer {
-  .pin {
-    top: 105%;
-    left: 56%;
-  }
-
-  .pulse {
-    top: 105.6%;
-    left: 55.3%;
-    z-index: 999;
-  }
-}
-
-.argentinaPointer {
-  .pin {
-    top: 107%;
-    left: 33%;
-  }
-
-  .pulse {
-    top: 107.5%;
-    left: 32.2%;
-    z-index: 999;
-  }
-}
-
-.indiaPointer {
-  .pin {
-    top: 75%;
-    left: 71%;
-  }
-
-  .pulse {
-    top: 75.6%;
-    left: 70.2%;
-    z-index: 999;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .usaPointer {
-    .pin {
-      top: 57%;
-      left: 24%;
-    }
-
-    .pulse {
-      top: 57.4%;
-      left: 23.2%;
-      z-index: 999;
-    }
-  }
-
-  .moroccoPointer {
-    .pin {
-      top: 60%;
-      left: 48.4%;
-    }
-
-    .pulse {
-      top: 60.4%;
-      left: 47.6%;
-      z-index: 999;
-    }
-  }
-
-  .tunisiaPointer {
-    .pin {
-      top: 58%;
-      left: 53%;
-    }
-
-    .pulse {
-      top: 58.4%;
-      left: 52.2%;
-      z-index: 999;
-    }
-  }
-
-  .southAfricaPointer {
-    .pin {
-      top: 85%;
-      left: 57%;
-    }
-
-    .pulse {
-      top: 85.4%;
-      left: 55.9%;
-      z-index: 999;
-    }
-  }
-
-  .argentinaPointer {
-    .pin {
-      top: 87%;
-      left: 32.9%;
-    }
-
-    .pulse {
-      top: 87.3%;
-      left: 32%;
-      z-index: 999;
-    }
-  }
-
-  .indiaPointer {
-    .pin {
-      top: 63%;
-      left: 71.4%;
-    }
-
-    .pulse {
-      top: 63.4%;
-      left: 70.5%;
-      z-index: 999;
-    }
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  .usaPointer {
-    .pin {
-      top: 73%;
-      left: 24%;
-    }
-
-    .pulse {
-      top: 73.4%;
-      left: 23.2%;
-      z-index: 999;
-    }
-  }
-
-  .moroccoPointer {
-    .pin {
-      top: 80%;
-      left: 48.5%;
-    }
-
-    .pulse {
-      top: 80.4%;
-      left: 47.7%;
-      z-index: 999;
-    }
-  }
-
-  .tunisiaPointer {
-    .pin {
-      top: 77%;
-      left: 52.5%;
-    }
-
-    .pulse {
-      top: 77.4%;
-      left: 51.7%;
-      z-index: 999;
-    }
-  }
-
-  .southAfricaPointer {
-    .pin {
-      top: 113%;
-      left: 56.4%;
-    }
-
-    .pulse {
-      top: 113.6%;
-      left: 55.6%;
-      z-index: 999;
-    }
-  }
-
-  .argentinaPointer {
-    .pin {
-      top: 115%;
-      left: 32.7%;
-    }
-
-    .pulse {
-      top: 115.5%;
-      left: 32%;
-      z-index: 999;
-    }
-  }
-
-  .indiaPointer {
-    .pin {
-      top: 83%;
-      left: 71%;
-    }
-
-    .pulse {
-      top: 83.4%;
-      left: 70.3%;
-      z-index: 999;
-    }
-  }
-}
-
-@media screen and (max-width: 2560px) {
-  .usaPointer {
-    .pin {
-      top: 73%;
-      left: 23%;
-    }
-
-    .pulse {
-      top: 73.7%;
-      left: 22.6%;
-      z-index: 999;
-    }
-  }
-
-  .moroccoPointer {
-    .pin {
-      top: 79%;
-      left: 47%;
-    }
-
-    .pulse {
-      top: 79.4%;
-      left: 46.6%;
-      z-index: 999;
-    }
-  }
-
-  .tunisiaPointer {
-    .pin {
-      top: 75%;
-      left: 52%;
-    }
-
-    .pulse {
-      top: 75.4%;
-      left: 51.5%;
-      z-index: 999;
-    }
-  }
-
-  .southAfricaPointer {
-    .pin {
-      top: 120%;
-      left: 56%;
-    }
-
-    .pulse {
-      top: 120.6%;
-      left: 55.6%;
-      z-index: 999;
-    }
-  }
-
-  .argentinaPointer {
-    .pin {
-      top: 122%;
-      left: 32.7%;
-    }
-
-    .pulse {
-      top: 122.5%;
-      left: 32.2%;
-      z-index: 999;
-    }
-  }
-
-  .indiaPointer {
-    .pin {
-      top: 85%;
-      left: 71%;
-    }
-
-    .pulse {
-      top: 85.4%;
-      left: 70.5%;
-      z-index: 999;
-    }
+  .mobile-view {
+    display: block;
+    margin: 1rem;
   }
 }
