--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -965,9 +965,9 @@ body {
     align-items: center;
   }
 
-   .resize{
+  .resize {
     margin-left: 68px;
-   }
+  }
 
   .hero-banner::before {
     left: 70%;
@@ -1377,11 +1377,14 @@ body {
 }
 
 #svgContainer {
-  width:30px;
+  width: 30px;
   height: 30px;
   transition: all 0.3s ease-in-out;
 }
 
+#svgContainer path:hover {
+  fill: white;
+}
 
 #enquiryText {
   opacity: 1;
@@ -1404,15 +1407,12 @@ body {
   display: block;
 }
 
-#svgContainer path:hover {
-  fill: white;
-}
-
 .button-enquiry::before {
   content: "";
   position: absolute;
   width: 100px;
-  height: 100%;
+  height: 5rem;
+  margin-top: -1em;
   background-image: linear-gradient(
     120deg,
     rgba(255, 255, 255, 0) 30%,
@@ -1429,9 +1429,29 @@ body {
     width: 13vw;
   }
   .button-enquiry {
-    padding-inline:0.8rem;
+    padding-inline: 0.8rem;
   }
-}  
+}
+
+@media (max-width: 991.98px) {
+  .button-container {
+    width: 27vw;
+    margin-right: 0;
+    margin-left: 1em;
+    justify-content: flex-start;
+    margin-top: -1em;
+  }
+  .button-enquiry {
+    padding-inline: 0.8rem;
+    padding-block: 0.8rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+  }
+  #svgContainer {
+    width: 24px;
+    height: 24px;
+  }
+}
 
 @keyframes shine {
   0% {
@@ -1446,4 +1466,3 @@ body {
     left: 80%;
   }
 }
-
