--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -1440,6 +1440,7 @@ body {
     margin-left: 1em;
     justify-content: flex-start;
     margin-top: -1em;
+    margin-bottom: 1em;
   }
   .button-enquiry {
     padding-inline: 0.8rem;
