Fixed enquiry btn responsiveness and navbar issues

--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -1435,7 +1435,7 @@ body {
 
 @media (max-width: 991.98px) {
   .button-container {
-    width: 27vw;
+    width: 126px;
     margin-right: 0;
     margin-left: 1em;
     justify-content: flex-start;
