--- a/adynamics3/check.css
+++ b/adynamics3/check.css
@@ -144,14 +144,26 @@ h1, h2, h3, h4, h5, h6 {
 .new_footer_top .footer_bg {
     position: absolute;
     bottom: 0;
-    background: url("./img/s.png");
+    background: url("./img/s.png") no-repeat center center;
+    background-size: cover;
     width: 100%;
-    height: 266px;
-    
 }
 
-
-
+@media (min-width: 769px) {
+    .new_footer_top .footer_bg {
+        height: 35vh;
+    }
+}
+@media (max-width: 768px) {
+    .new_footer_top .footer_bg {
+        height: 30vh; 
+    }
+}
+@media (max-width: 480px) {
+    .new_footer_top .footer_bg {
+        height: 25vh; 
+    }
+}
 
 
 @-moz-keyframes myfirst {
@@ -184,6 +196,6 @@ h1, h2, h3, h4, h5, h6 {
 /*************footer End*****************/
 @media (min-width: 1100px){
  .ft_mar{
-    margin-left: -100px;
+    /* margin-left: -100px; */
  }
 }
