--- a/adynamics3/css/style.css
+++ b/adynamics3/css/style.css
@@ -427,7 +427,7 @@ nav {
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 0.15em solid #49aaaa; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
+  white-space: nowrap; 
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0.10em; /* Adjust as needed */
   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
@@ -536,10 +536,10 @@ nav {
   .hero{
     width: 100%;
 
-    .hero-title{
+    /* .hero-title{
       font-size: 1rem;
     
-    }
+    } */
   }
 
   .hero .hero-content{
@@ -560,9 +560,9 @@ nav {
   .hero{
     width: 100%;
 
-    .hero-title{
+    /* .hero-title{
       font-size: 1rem;
-    }
+    } */
   }
 
   .hero .hero-content{
