--- a/adynamics3/css/style.css
+++ b/adynamics3/css/style.css
@@ -548,7 +548,6 @@ nav {
 
   body{
     font-size: 0.8rem;
-    padding: 0.5rem;
   }
 }
 
@@ -578,7 +577,7 @@ nav {
 .demo-class{
   display: none;
   z-index: 99999;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
