--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -1417,9 +1417,9 @@ body {
 .button-enquiry::before {
   content: "";
   position: absolute;
-  width: 100px;
-  height: 5rem;
-  margin-top: -1em;
+  width: 50px;
+  height: 4.5rem;
+  margin-top: -0.5em;
   background-image: linear-gradient(
     120deg,
     rgba(255, 255, 255, 0) 30%,
@@ -1462,7 +1462,7 @@ body {
   }
 
   to {
-    left: 80%;
+    left: 80px;
   }
 }
 
