Add line and ripple animations for map and redesign map for mobile view

--- a/adynamics3/assets/css/style.css
+++ b/adynamics3/assets/css/style.css
@@ -3303,6 +3303,7 @@ body {
     calc(var(--cd-color-3-l) * 0.9)
   );
   transition: border-color 0.3s;
+  margin: 0 1em;
 }
 .js .cd-h-timeline__navigation::after {
   content: "";
