--- a/adynamics3/css/contact-form.css
+++ b/adynamics3/css/contact-form.css
@@ -12,7 +12,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   margin: 15px;
   position: relative;
