--- a/adynamics3/check.css
+++ b/adynamics3/check.css
@@ -28,7 +28,7 @@ body {
     font-weight: 300;
     line-height: 28px;
     color: #6a7695;
-    margin-bottom: 20px;
+    margin-bottom: 11px;
 }
 .new_footer_top .company_widget .f_subscribe_two .btn_get {
     border-width: 1px;
@@ -121,7 +121,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     margin-left: 4px;
 }
 .new_footer_top .f-title {
-    margin-bottom: 30px;
+    margin-bottom: 16px;
     color: #263b5e;
 }
 .f_600 {
@@ -159,6 +159,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 480px) {
     .new_footer_top .footer_bg {
         height: 25vh; 
+        border: 2px solid red;
     }
 }
 
